--- a/src/Engine/Common/Common.csproj
+++ b/src/Engine/Common/Common.csproj
@@ -88,6 +88,7 @@
     <Compile Include="IPoint2PointConstraintImp.cs" />
     <Compile Include="IRenderCanvasImp.cs" />
     <Compile Include="IRenderContextImp.cs" />
+    <Compile Include="IRigidBody.cs" />
     <Compile Include="IRigidBodyImp.cs" />
     <Compile Include="IShaderParam.cs" />
     <Compile Include="IShaderProgramImp.cs" />
