--- a/src/Engine/Examples/CubeAndTiles/CubeAndTiles.csproj
+++ b/src/Engine/Examples/CubeAndTiles/CubeAndTiles.csproj
@@ -92,6 +92,8 @@
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)/Microsoft.CSharp.targets" />
   <PropertyGroup>
