Physics is now working under Windows and Linux
Now using BulletSharp Version: bulletsharp-pinvoke-0.4
Some adjustments had to me made:
- EmptyShape is no longer avaliable
- Some Funktions had to be renamed

--- a/Fusee_Linux.targets
+++ b/Fusee_Linux.targets
@@ -6,6 +6,7 @@
     <Message Importance="High" Text="### BeforeBuildEvent $(TargetName): Copying necessary files ###" />
     <MakeDir Directories="$(OutputPath)" Condition="!Exists('$(OutputPath)')" />
     <Exec Command="cp -a $(OutputPath)../../*.dll $(OutputPath)" />
+    <Exec Command="cp -a $(SolutionDir)ExternalBinaries/Bullet/*.so* $(OutputPath)" />
     <Exec Command="cp -a $(SolutionDir)ExternalBinaries/SFML/*.so* $(OutputPath)" />
   </Target> 
   
