--- a/src/Uniplug/Cinema4D/C4d/C4d.csproj
+++ b/src/Uniplug/Cinema4D/C4d/C4d.csproj
@@ -40,7 +40,7 @@
     <OutputPath>$(C4D_DIR)\plugins\ManagedPlugIn\x64\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <DebugType>full</DebugType>
-    <PlatformTarget>x64</PlatformTarget>
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <ErrorReport>prompt</ErrorReport>
     <CodeAnalysisIgnoreBuiltInRuleSets>false</CodeAnalysisIgnoreBuiltInRuleSets>
     <CodeAnalysisIgnoreBuiltInRules>false</CodeAnalysisIgnoreBuiltInRules>
