--- a/src/Uniplug/Cinema4D/GameAuthoring/GameAuthoring.csproj
+++ b/src/Uniplug/Cinema4D/GameAuthoring/GameAuthoring.csproj
@@ -18,7 +18,7 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>..\..\..\..\..\Cinema 4D\plugins\GameAuthoring\</OutputPath>
+    <OutputPath>$(C4D_DIR)\plugins\FuseeGameAuthoring\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -39,6 +39,10 @@
     <Reference Include="C4d">
       <HintPath>..\..\..\..\..\Cinema 4D\plugins\ManagedPlugIn\x64\C4d.dll</HintPath>
     </Reference>
+    <Reference Include="GameAuthoringTools, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\..\Cinema 4D\plugins\FuseeGameAuthoring\GameAuthoringTools.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -49,7 +53,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="GameAuthoring.cs" />
+    <Compile Include="source\GameAuthoring.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -58,6 +62,11 @@
     <Content Include="res\YourLogoPattern.tif">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="res\description\" />
+    <Folder Include="res\dialogs\" />
+    <Folder Include="res\strings_us\dialogs\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
