Fixed the attributes class. Now attributes are correct. But need to implement some flags for future use.

--- a/src/Uniplug/Cinema4D/GameAuthoring/GameAuthoring.csproj
+++ b/src/Uniplug/Cinema4D/GameAuthoring/GameAuthoring.csproj
@@ -68,7 +68,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="res\YourLogoPattern.tif">
+    <Content Include="res\icon.tif">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
