--- a/src/Uniplug/Cinema4D/GameAuthoring/GameAuthoring.csproj
+++ b/src/Uniplug/Cinema4D/GameAuthoring/GameAuthoring.csproj
@@ -54,10 +54,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="res\description\TGameAuthoring.cs" />
     <Compile Include="source\GameAuthoring.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="res\description\TGameAuthoring.res" />
+    <None Include="res\strings_us\c4d_strings.str" />
+    <None Include="res\strings_us\TGameAuthoring.str" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="res\icon.tif">
@@ -65,7 +69,6 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="res\description\" />
     <Folder Include="res\dialogs\" />
     <Folder Include="res\strings_us\dialogs\" />
   </ItemGroup>
