--- a/src/Uniplug/Cinema4D/fuProjectGen/fuProjectGen.csproj
+++ b/src/Uniplug/Cinema4D/fuProjectGen/fuProjectGen.csproj
@@ -20,7 +20,7 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
+    <OutputPath>..\..\..\..\..\Cinema 4D\plugins\FuseeGameAuthoring\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
