--- a/src/Uniplug/Cinema4D/GameAuthoringTools/GameAuthoringTools.csproj
+++ b/src/Uniplug/Cinema4D/GameAuthoringTools/GameAuthoringTools.csproj
@@ -31,8 +31,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="fuProjectGen">
-      <HintPath>..\fuProjectGen\bin\Debug\fuProjectGen.dll</HintPath>
+    <Reference Include="fuProjectGen, Version=1.0.1.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\..\Cinema 4D\plugins\FuseeAuthoringTools\fuProjectGen.dll</HintPath>
     </Reference>
     <Reference Include="Fusee.Math.Conversion">
       <HintPath>..\..\..\..\..\Cinema 4D\plugins\ManagedPlugIn\x64\Fusee.Math.Conversion.dll</HintPath>
