--- a/src/Engine/Examples/TCP_ServerTest/TCPServerTest.csproj
+++ b/src/Engine/Examples/TCP_ServerTest/TCPServerTest.csproj
@@ -48,6 +48,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="GUI.cs" />
     <Compile Include="TcpConnectServer.cs" />
     <Compile Include="Main.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
