--- a/src/Uniplug/Cinema4D/FuExport/FuExport.csproj
+++ b/src/Uniplug/Cinema4D/FuExport/FuExport.csproj
@@ -46,6 +46,10 @@
     <Reference Include="Fusee.SerializationSerializer">
       <HintPath>..\..\..\..\Bin\Debug\Fusee.SerializationSerializer.dll</HintPath>
     </Reference>
+    <Reference Include="FuseeExport, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\..\Cinema 4D\plugins\FuExport\FuseeExport.dll</HintPath>
+    </Reference>
     <Reference Include="protobuf-net">
       <HintPath>..\..\..\..\ExternalBinaries\protobuf\protobuf-net.dll</HintPath>
     </Reference>
