--- a/src/Engine/Examples/TcpServerTest/TcpServerTest.csproj
+++ b/src/Engine/Examples/TcpServerTest/TcpServerTest.csproj
@@ -9,8 +9,8 @@
     <ProjectGuid>{A99100EA-EA7C-4FEE-B3E4-E25C778B1075}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Examples.TCP_ServerTest</RootNamespace>
-    <AssemblyName>Examples.TCP_ServerTest</AssemblyName>
+    <RootNamespace>Examples.TcpServerTest</RootNamespace>
+    <AssemblyName>Examples.TcpServerTest</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <UseVSHostingProcess>false</UseVSHostingProcess>
