Can now create an ui from code. Need to figure out how to include buttons and string fields. They return false. Not that ideal.

--- a/src/Uniplug/Cinema4D/C4d/C4d.csproj
+++ b/src/Uniplug/Cinema4D/C4d/C4d.csproj
@@ -141,6 +141,7 @@
     <Compile Include="C4dApi\C4dApiPINVOKE.cs" />
     <Compile Include="C4dApi\C4DAtom.cs" />
     <Compile Include="C4dApi\C4DAtomGoal.cs" />
+    <Compile Include="C4dApi\C4DGadget.cs" />
     <Compile Include="C4dApi\C4DThread.cs" />
     <Compile Include="C4dApi\C4D_GvCalcTable.cs" />
     <Compile Include="C4dApi\CAJointObject.cs" />
@@ -234,13 +235,16 @@
     <Compile Include="C4dApi\FILESELECT.cs" />
     <Compile Include="C4dApi\FILESELECTTYPE.cs" />
     <Compile Include="C4dApi\FINDANIM.cs" />
+    <Compile Include="C4dApi\GadgetPtr.cs" />
     <Compile Include="C4dApi\GeData.cs" />
     <Compile Include="C4dApi\GeDebugDisableFPExceptions.cs" />
+    <Compile Include="C4dApi\GeDialog.cs" />
     <Compile Include="C4dApi\GeListHead.cs" />
     <Compile Include="C4dApi\GeListNode.cs" />
     <Compile Include="C4dApi\GeMarker.cs" />
     <Compile Include="C4dApi\GEMB.cs" />
     <Compile Include="C4dApi\GEMB_R.cs" />
+    <Compile Include="C4dApi\GeModalDialog.cs" />
     <Compile Include="C4dApi\GeRWSpinlock.cs" />
     <Compile Include="C4dApi\GeSignal.cs" />
     <Compile Include="C4dApi\GeSpinlock.cs" />
@@ -248,6 +252,7 @@
     <Compile Include="C4dApi\GETBRANCHINFO.cs" />
     <Compile Include="C4dApi\GetCustomIconData.cs" />
     <Compile Include="C4dApi\GetRealCameraData.cs" />
+    <Compile Include="C4dApi\GeUserArea.cs" />
     <Compile Include="C4dApi\GlProgramType.cs" />
     <Compile Include="C4dApi\GlUniformParamType.cs" />
     <Compile Include="C4dApi\GlVertexBufferAccessFlags.cs" />
@@ -329,6 +334,7 @@
     <Compile Include="C4dApi\HYPERFILEVALUE.cs" />
     <Compile Include="C4dApi\ICONDATAFLAGS.cs" />
     <Compile Include="C4dApi\iCustomDataType_inex.cs" />
+    <Compile Include="C4dApi\iCustomGui.cs" />
     <Compile Include="C4dApi\IDENTIFYFILE.cs" />
     <Compile Include="C4dApi\iIncludeExcludeData.cs" />
     <Compile Include="C4dApi\iInclusionTable.cs" />
@@ -360,6 +366,7 @@
     <Compile Include="C4dApi\MarkMaterials.cs" />
     <Compile Include="C4dApi\Material.cs" />
     <Compile Include="C4dApi\MaterialDragAndDrop.cs" />
+    <Compile Include="C4dApi\MAXONCONVERTMODE.cs" />
     <Compile Include="C4dApi\MemoryFileStruct.cs" />
     <Compile Include="C4dApi\MessageFilter.cs" />
     <Compile Include="C4dApi\MESSAGERESULT.cs" />
@@ -419,6 +426,8 @@
     <Compile Include="C4dApi\PolyTriangulate.cs" />
     <Compile Include="C4dApi\PolyWeight.cs" />
     <Compile Include="C4dApi\PriorityList.cs" />
+    <Compile Include="C4dApi\ProgressDialog.cs" />
+    <Compile Include="C4dApi\ProgressThread.cs" />
     <Compile Include="C4dApi\PROTOCOL.cs" />
     <Compile Include="C4dApi\PROXYTYPE.cs" />
     <Compile Include="C4dApi\QUALIFIER.cs" />
@@ -476,6 +485,7 @@
     <Compile Include="C4dApi\StickTextureTag.cs" />
     <Compile Include="C4dApi\STRINGENCODING.cs" />
     <Compile Include="C4dApi\StringUndo.cs" />
+    <Compile Include="C4dApi\SubDialog.cs" />
     <Compile Include="C4dApi\SurfaceIntersection.cs" />
     <Compile Include="C4dApi\SWIGTYPE_m_BitmapLoaderData__f_p_BitmapLoaderAnimatedData_enum_BITMAPLOADERACTION_p_BaseBitmap_Int32__IMAGERESULT.cs" />
     <Compile Include="C4dApi\SWIGTYPE_m_BitmapLoaderData__f_p_BitmapLoaderAnimatedData_p_BaseSound__IMAGERESULT.cs" />
@@ -556,12 +566,15 @@
     <Compile Include="C4dApi\SWIGTYPE_p_C4DObjectList.cs" />
     <Compile Include="C4dApi\SWIGTYPE_p_C4DPL_CommandLineArgs.cs" />
     <Compile Include="C4dApi\SWIGTYPE_p_C4DUuid.cs" />
+    <Compile Include="C4dApi\SWIGTYPE_p_CDialog.cs" />
     <Compile Include="C4dApi\SWIGTYPE_p_Char.cs" />
     <Compile Include="C4dApi\SWIGTYPE_p_CKey.cs" />
     <Compile Include="C4dApi\SWIGTYPE_p_ConstNormalHandle.cs" />
     <Compile Include="C4dApi\SWIGTYPE_p_ConstUVWHandle.cs" />
     <Compile Include="C4dApi\SWIGTYPE_p_CTrack.cs" />
+    <Compile Include="C4dApi\SWIGTYPE_p_CUserArea.cs" />
     <Compile Include="C4dApi\SWIGTYPE_p_CUSTOMDATATYPEPLUGIN.cs" />
+    <Compile Include="C4dApi\SWIGTYPE_p_CUSTOMGUIPLUGIN.cs" />
     <Compile Include="C4dApi\SWIGTYPE_p_CustomProperty.cs" />
     <Compile Include="C4dApi\SWIGTYPE_p_DescEntry.cs" />
     <Compile Include="C4dApi\SWIGTYPE_p_DESCFLAGS_DESC.cs" />
@@ -582,6 +595,7 @@
     <Compile Include="C4dApi\SWIGTYPE_p_f_p_GvCalcTable_p_GvRun__Int32.cs" />
     <Compile Include="C4dApi\SWIGTYPE_p_f_p_GvCalcTable_p_GvRun__void.cs" />
     <Compile Include="C4dApi\SWIGTYPE_p_f_p_iInclusionTable__void.cs" />
+    <Compile Include="C4dApi\SWIGTYPE_p_f_p_void__p_void.cs" />
     <Compile Include="C4dApi\SWIGTYPE_p_f_r_GvAnimHook__Bool.cs" />
     <Compile Include="C4dApi\SWIGTYPE_p_f_r_GvCalcHook__Bool.cs" />
     <Compile Include="C4dApi\SWIGTYPE_p_f_r_GvDrawHook__void.cs" />
@@ -589,10 +603,9 @@
     <Compile Include="C4dApi\SWIGTYPE_p_f_r_GvMenuHook__Bool.cs" />
     <Compile Include="C4dApi\SWIGTYPE_p_f_r_GvMessHook__Bool.cs" />
     <Compile Include="C4dApi\SWIGTYPE_p_f_r_q_const__Filename_Int_p_void__Int32.cs" />
-    <Compile Include="C4dApi\SWIGTYPE_p_GeDialog.cs" />
+    <Compile Include="C4dApi\SWIGTYPE_p_GeClipMap.cs" />
     <Compile Include="C4dApi\SWIGTYPE_p_GEMB_R.cs" />
-    <Compile Include="C4dApi\SWIGTYPE_p_GeModalDialog.cs" />
-    <Compile Include="C4dApi\SWIGTYPE_p_GeUserArea.cs" />
+    <Compile Include="C4dApi\SWIGTYPE_p_GeResource.cs" />
     <Compile Include="C4dApi\SWIGTYPE_p_GlFrameBuffer.cs" />
     <Compile Include="C4dApi\SWIGTYPE_p_GlLight.cs" />
     <Compile Include="C4dApi\SWIGTYPE_p_GlVertexBufferAttributeInfo.cs" />
@@ -609,6 +622,7 @@
     <Compile Include="C4dApi\SWIGTYPE_p_Int16.cs" />
     <Compile Include="C4dApi\SWIGTYPE_p_Int32.cs" />
     <Compile Include="C4dApi\SWIGTYPE_p_Int64.cs" />
+    <Compile Include="C4dApi\SWIGTYPE_p_LASTCURSORINFOFUNC.cs" />
     <Compile Include="C4dApi\SWIGTYPE_p_LENGTHUNIT.cs" />
     <Compile Include="C4dApi\SWIGTYPE_p_LocalResource.cs" />
     <Compile Include="C4dApi\SWIGTYPE_p_Matrix32.cs" />
@@ -735,10 +749,17 @@
     <Compile Include="C4dApi\SWIGTYPE_p_Render.cs" />
     <Compile Include="C4dApi\SWIGTYPE_p_RESOURCEDATATYPEPLUGIN.cs" />
     <Compile Include="C4dApi\SWIGTYPE_p_RootTextureString.cs" />
+    <Compile Include="C4dApi\SWIGTYPE_p_SCRIPTMODE.cs" />
     <Compile Include="C4dApi\SWIGTYPE_p_SplineData.cs" />
     <Compile Include="C4dApi\SWIGTYPE_p_StereoCameraInfo.cs" />
     <Compile Include="C4dApi\SWIGTYPE_p_String.cs" />
-    <Compile Include="C4dApi\SWIGTYPE_p_SubDialog.cs" />
+    <Compile Include="C4dApi\SWIGTYPE_p_TriStateT_BaseTime_t.cs" />
+    <Compile Include="C4dApi\SWIGTYPE_p_TriStateT_Bool_t.cs" />
+    <Compile Include="C4dApi\SWIGTYPE_p_TriStateT_Float_t.cs" />
+    <Compile Include="C4dApi\SWIGTYPE_p_TriStateT_GeData_t.cs" />
+    <Compile Include="C4dApi\SWIGTYPE_p_TriStateT_Int32_t.cs" />
+    <Compile Include="C4dApi\SWIGTYPE_p_TriStateT_String_t.cs" />
+    <Compile Include="C4dApi\SWIGTYPE_p_TriStateT_Vector_t.cs" />
     <Compile Include="C4dApi\SWIGTYPE_p_UChar.cs" />
     <Compile Include="C4dApi\SWIGTYPE_p_UInt16.cs" />
     <Compile Include="C4dApi\SWIGTYPE_p_UInt32.cs" />
