Many changes because of the meeting. One step forward with tag plugin message functionality.

--- a/src/Uniplug/Cinema4D/Native/Native.vcxproj
+++ b/src/Uniplug/Cinema4D/Native/Native.vcxproj
@@ -239,6 +239,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="C4dApiExtensions\ObjectDataM.cpp" />
+    <ClCompile Include="C4dApiExtensions\TagDataM.cpp" />
     <ClCompile Include="C4dApiWrapper.cpp" />
     <ClCompile Include="source\main.cpp" />
   </ItemGroup>
@@ -247,6 +248,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="C4dApiExtensions\ObjectDataM.h" />
+    <ClInclude Include="C4dApiExtensions\TagDataM.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
