Non working changes from today. Want to keep them nonetheless at least in git.

--- a/src/Uniplug/Cinema4D/C4d/C4d.csproj
+++ b/src/Uniplug/Cinema4D/C4d/C4d.csproj
@@ -84,6 +84,7 @@
     </Compile>
     <Compile Include="Logger.cs" />
     <Compile Include="Plugin.cs" />
+    <Compile Include="PluginAttributes\MessagePluginAttribute.cs" />
     <Compile Include="PluginAttributes\CommandPluginAttribute.cs" />
     <Compile Include="PluginAttributes\ObjectPluginAttribute.cs" />
     <Compile Include="PluginAttributes\PluginAttribute.cs" />
