--- a/src/Engine/Examples/KameraTest/KameraTest.csproj
+++ b/src/Engine/Examples/KameraTest/KameraTest.csproj
@@ -75,10 +75,6 @@
       <Project>{E95FA1C8-6491-4B4B-BBE1-EDA6B16B2C6A}</Project>
       <Name>Math.Core</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\Components\SceneManagement\SceneManagement.csproj">
-      <Project>{81B3A7F0-F8E4-45D0-BE69-B869C9B1803E}</Project>
-      <Name>SceneManagement</Name>
-    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -89,7 +85,9 @@
     </None>
     <None Include="Assets\Rechteck.fus" />
     <None Include="Assets\Rechteck.obj" />
-    <None Include="Assets\Rechteck.obj.model" />
+    <Content Include="Assets\Rechteck.obj.model">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)/Microsoft.CSharp.targets" />
   <PropertyGroup>
