--- a/src/Engine/Examples/Quest_test_physics/Quest_test_physics.csproj
+++ b/src/Engine/Examples/Quest_test_physics/Quest_test_physics.csproj
@@ -86,6 +86,9 @@
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Assets\lab_rot_inner.fus">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Include="Assets\simpleLab2.fus">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
